PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
00 Oct 2006, PHP 5.2.0RC7
- Fixed bug #39192 (Not including nsapi.h properly with SJSWS 7).
  This will make PHP 5.2 compatible to new Sun Webserver. (Uwe)
19 Oct 2006, PHP 5.2.0RC6
- Fixed invalid read in imagecreatefrompng when an empty file is given
  (Pierre, Tony)
- Fixed bug #39140 (Uncaught exception may cause crash). (Dmitry)
- Fixed bug #39020 (PHP in FastCGI server mode crashes). (Dmitry)
- Fixed bug #38458, PECL bug #8944, PECL bug #7775 (error retrieving
  columns after long/text columns with PDO_ODBC). (Wez)
- Fixed PECL bug #9061 (oci8 might reuse wrong persistent connection). (Tony)
- Fixed PECL bug #8816 (issue in php_oci_statement_fetch with more than one 
  piecewise column) (jeff at badtz-maru dot com, Tony)
- Fixed PECL bug #7755 (error selecting DOUBLE fields with PDO_ODBC).
  ("slaws", Wez)
- Fixed bug #39125 (Memleak when reflecting non-existing class/method). (Tony)
- Fixed bug #39067 (getDeclaringClass() and private properties). (Tony)
- Fixed bug #39034 (curl_exec() with return transfer returns TRUE on empty
  files). (Ilia)
- Fixed bug #38934 (move_uploaded_file() cannot read uploaded file outside of
  open_basedir). (Ilia)
- Fixed bug #38882 (ldap_connect causes segfault with newer versions of 
  OpenLDAP). (Tony)
- Fixed bug #38649 (uninit'd optional arg in stream_socket_sendto()). (Sara)
- Fixed bug #38465 (ReflectionParameter fails if default value is an access to
  self::). (Johannes)
- Fixed bug #38400 (Use of com.typelib_file may cause a crash). (Ilia)
- Fixed bug #38198 (possible crash when COM reports an exception). (Ilia)
- Fixed bug #37262 (var_export() does not escape \0 character). (Ilia)
- Fixed bug #36515 (Unlinking buckets from non-existant brigades). (Sara)

05 Oct 2006, PHP 5.2.0RC5
- Updated bundled OpenSSL to version 0.9.8d in the Windows distro. (Edin)